 - extend and organize the information shown in /debug
 ! rename '/roam' to '/mapmeshdrawer' which cycles through the renderers
 - add '/debugglerrors' command (enables per-frame glGetError reporting)
 - add '/debuggl x y z' command (requires DebugGL=1) where x=source,y=type,z=severity
 - add '/wire{model,sky,tree,water}' debug commands

Bugfixes:
 - fix LuaParser thread-safety
 - fix ProfileDrawer thread-safety
 - fix ScopedMtTimer thread-safety
 - fix LosMap thread-safety
 - fix PathTexture thread-safety
 - fix RoamMeshDrawer thread-safety
 - fix LuaVFSDownload thread-safety during reload
 - fix race-condition between screenshot counter and libIL
 - fix sound-thread occasionally accessing a deleted pointer on exit
 - fix sound-buffer deletion while buffers were still bound to sources
 - fix double-free in CBitmap's move-ctor for DDS images
 - fix wrong number of pool-threads being spawned on reload
 - fix runaway Text::WrapInPlace string-allocation
 - fix FarTextureHandler performance-stalls
 - fix potential segfault in SolidObjectDef::GetModelRadius
 - fix degenerate GroundFlash quads
 - fix ExploSpike projectiles instantly disappearing if they collided with anything on creation
 - fix potential gsRNG.Next*() eval-order desync
 - fix OOB memory-read in GameSetup::LoadTeams
 - fix map-damage explosions being processed twice
 - fix explosions causing terraform-spikes on certain maps
 - fix UnitDamaged events following UnitDestroyed
 - fix BuilderCAI crash when parsing invalid build-commands
 - fix canBeAssisted-check in Builder::StartBuild
 - fix ATI uniform-type validation for LuaMaterials
 - fix ATI driver crash with BumpWater (on any map without a coastline) in TextureAtlas generation
 - fix crash in AdvTreeDrawer on ARB-only junkware
 - fix crash in InfoTextureHandler on ARB-only junkware
 - fix PlayerRoster causing memory corruption on reload
 - fix random WaitingDamage memory corruption
 - fix Light::ClearDeathDependencies memory corruption